# muzic_channelz

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.sh  pyproject.toml  requirements.txt  start.sh
app/: __init__.py  azuracast.py  channel_session.py  config.py  ffmpeg_runner.py  main.py  metadata.py  metadata_cache.py  models.py  now_playing.py  overlay.py  services.py  store.py  version.py
app/routers/: admin.py  backgrounds.py  channels.py  hdhr.py  logs.py  stream.py  system.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/views/: Administration.jsx  BackgroundEditor.jsx  ChannelDetail.jsx  Channelz.jsx  FfmpegSettings.jsx  Home.jsx  LiveLogs.jsx
scripts/: clean_logo.py  generate_update_pdf.py  muzic-channelz.service  run.sh
